--- a/views/index.erb
+++ b/views/index.erb
@@ -1,17 +1,25 @@
 <h2>Welcome to Pizza Shop!</h2>
 <button type="button" onclick="something()" class="btn btn-primary btn-lg">Click me!</button>
 <div class="container-fluid">
-<div class="row show-grid">
-	<% @pizza.each do |item_of_pizza|%>
-	<p>
-    <div class="col-md-4"><%= item_of_pizza.title %> <br />
- <!--    <img src="<%= item_of_pizza.path_to_image %>"> <br /> -->
- <img class="img-thumbnail" src="<%= item_of_pizza.path_to_image %>" style="width: 250px; height: 250px;" data-holder-rendered="true" data-src="holder.js/140x140" alt="140x140"> <br />
- 	Цена: <%= item_of_pizza.price %> <br />
-    <button type="button" class="btn btn-success btn-sm"> Add to cart </button>
-    </div>
+	<div class="row show-grid">
+		<% @pizza.each do |item_of_pizza|%>
+		
+    		<div class="col-md-4">
+
+    			<div>
+    				<%= item_of_pizza.title %>
+    			</div>
+    			<div>
+    				<img class="img-thumbnail" src="<%= item_of_pizza.path_to_image %>" style="width: 250px; height: 250px;" data-holder-rendered="true" data-src="holder.js/140x140" alt="140x140">
+    			</div>
+    			<div>
+    				Цена: <%= item_of_pizza.price %>
+    			</div>
+    			<div>
+    				<button type="button" class="btn btn-success btn-sm"> Add to cart </button>
+    			</div>
+			</div>
     
-	</p>
-	<% end %>
+		<% end %>
 	</div>
-	</div>
+</div>
