--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
     				Цена: <%= item_of_pizza.price %>
     			</div>
     			<div>
-    				<button type="button" class="btn btn-success btn-sm"> Add to cart </button>
+    				<button type="button" class="btn btn-success btn-sm" onclick="add_to_cart(<%= item_of_pizza.id %>)"> Add to cart! </button>
     			</div>
 			</div>
     
