Add input form, cart_get_orders and update functions

--- a/views/index.erb
+++ b/views/index.erb
@@ -23,3 +23,9 @@
 		<% end %>
 	</div>
 </div>
+<script type="text/javascript">
+    $(function () {
+        update_orders();
+        update_orders_button();
+    });
+</script>
