--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,8 +40,8 @@
 			    <ul class="nav navbar-nav navbar-right">
 			    	<li>
 			    		<form action="/cart" method="post">
-			    			<input id="orders_input" type="text" name="orders"/>
-			    			<input id="orders_button" type="submit" class="btn btn-primary btn-lg" value="Cart(..)"/>
+			    			<input id="orders_input" type="hidden" name="orders"/>
+			    			<input id="orders_button" type="submit" class="btn btn-primary btn-lg"/>
 			    		</form>
 			    	</li>
 			    </ul>
