--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/app.css" rel="stylesheet">
  		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="/vendor/jquery-1.9.1.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -40,7 +41,7 @@
 			    <ul class="nav navbar-nav navbar-right">
 			    	<li>
 			    		<form action="/cart" method="post">
-			    			<input id="orders_input" type="hidden" name="orders"/>
+			    			<input id="orders_input" type="text" name="orders"/>
 			    			<input id="orders_button" type="submit" class="btn btn-primary btn-lg"/>
 			    		</form>
 			    	</li>
