Change Cart (button) style

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -42,7 +42,7 @@
 			    	<li>
 			    		<form action="/cart" method="post">
 			    			<input id="orders_input" type="text" name="orders"/>
-			    			<input id="orders_button" type="submit" class="btn btn-primary btn-lg"/>
+			    			<input id="orders_button" type="submit"/>
 			    		</form>
 			    	</li>
 			    </ul>
