--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,9 @@
 #orders_button {
-	background-color: yellow; 
+	background-color: #F8F8F8;
+	border: none;
+	font-size: 22px;
+	padding-top: 10px;
+	padding-right: 20px;
+	text-decoration: underline;
+
 }
